Implemented issuance of single/coop review invitations
